# torchode

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-package.yml
docs/: README.md  backprop.md  comparison.md  extra-args.md  extra-stats.ipynb  jit.ipynb  nd-data.md  requirements.in  requirements.txt  step-size-controllers.md  torchdiffeq.ipynb
tests/: adjoint_test.py  dtype_stability_test.py  extra_args_test.py  fixed_step_controller_test.py  interface_test.py  interpolation_test.py  problems.py  single_step_methods_test.py  step_size_controllers_test.py  stubs.py  torch_script_test.py
torchode/: __init__.py  adjoints.py  interface.py  interpolation.py  problems.py  solution.py  status_codes.py  step_size_controllers.py  terms.py  typing.py
torchode/single_step_methods/: __init__.py  base.py  dopri5.py  euler.py  heun.py  runge_kutta.py  tsit5.py
